[package]
name = "ntex-async-std"
version = "0.4.0-b.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "async-std intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-rt-async-std/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ntex_async_std"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "0.1.21"
ntex-io = "1.0.0-b.1"
ntex-util = "1.0.0-b.1"
log = "0.4"
pin-project-lite = "0.2"
async-std = { version = "1", features = ["unstable"] }
oneshot = { version = "0.1", default-features = false, features = ["async"] }
