[package]
name = "ntex-bytes"
version = "0.1.28"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Carl Lerche <me@carllerche.com>"]
description = "Types and traits for working with bytes (bytes crate fork)"
documentation = "https://docs.rs/ntex-bytes"
repository = "https://github.com/ntex-rs/ntex"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []

# simd utf8 check support
simd = ["simdutf8"]

mpool = []

[dependencies]
bitflags = { workspace = true }
bytes = "1"
serde = { workspace = true }
futures-core = { version = "0.3", default-features = false }
simdutf8 = { version = "0.1.4", optional = true }

[dev-dependencies]
serde_test = "1"
serde_json = "1"
ntex = "2"
ntex-bytes = { path = ".", features = ["mpool"] }
