[package]
name = "ntex-bytes"
version = "1.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Types and traits for working with bytes (bytes crate fork)"
documentation = "https://docs.rs/ntex-bytes"
repository = "https://github.com/ntex-rs/ntex"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[features]
default = []

# simd utf8 check support
simd = ["simdutf8"]

[dependencies]
bytes = "1"
serde = { workspace = true }
simdutf8 = { version = "0.1.5", optional = true }

[dev-dependencies]
serde_test = "1"
serde_json = "1"
