[package]
name = "ntex-bytes"
version = "1.3.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Types and traits for working with bytes (bytes crate fork)"
documentation = "https://docs.rs/ntex-bytes"
repository = "https://github.com/ntex-rs/ntex"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[features]
default = []

# simd utf8 check support
simd = ["simdutf8"]

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
simdutf8 = { workspace = true, optional = true }

[dev-dependencies]
serde_test = { workspace = true }
serde_json = { workspace = true }
