[package]
name = "ntex-codec"
version = "0.6.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for encoding and decoding frames"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-codec/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[lib]
name = "ntex_codec"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "0.1"
