[package]
name = "ntex-codec"
version = "1.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for encoding and decoding frames"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-codec/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86"

[lib]
name = "ntex_codec"
path = "src/lib.rs"

[dependencies]
ntex-bytes = { workspace = true }
