[package]
name = "ntex-compio"
version = "3.0.0-pre.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "compio runtime intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-compio/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_compio"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "1"
ntex-io = "3.0.0-pre.0"
ntex-util = "3"
ntex-rt = "3"
ntex-service = "3.6"
log = { workspace = true }

compio-buf = "0.7"
compio-io = "0.8.3"
compio-net = "0.9"
compio-runtime = "0.9.4"
compio-driver = { version = "0.9.2", features = ["io-uring", "polling"] }
