[package]
name = "ntex-compio"
version = "3.3.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "compio runtime intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-compio/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_compio"
path = "src/lib.rs"

[features]
default = []

# compio runtime
compio = ["ntex-rt/compio", "compio-io", "compio-net", "compio-runtime", "compio-driver"]

[dependencies]
ntex-bytes = "1"
ntex-io = "3"
ntex-util = "3"
ntex-rt = "3.3"
ntex-service = "3.8"
log = { workspace = true }

compio-buf = "0.7"
compio-io = { version = "0.8", optional = true }
compio-net = { version = "0.10", optional = true }
compio-runtime = { version = "0.10", optional = true }
compio-driver = { version = "0.10", features = ["io-uring", "polling"], optional = true }
