[package]
name = "ntex-connect"
version = "1.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "ntexwork connect utils for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ntex_connect"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["tls-openssl", "ntex-tls/openssl"]

# rustls support
rustls = ["tls-rustls", "webpki-roots", "ntex-tls/rustls"]

# tokio runtime
tokio = ["ntex-rt/tokio", "ntex-tokio"]

# glommio runtime
glommio = ["ntex-rt/glommio", "ntex-glommio"]

# async-std runtime
async-std = ["ntex-rt/async-std", "ntex-async-std"]

[dependencies]
ntex-service = "2.0.0"
ntex-io = "1.0.0"
ntex-tls = "1.0.0"
ntex-util = "1.0.0"
ntex-bytes = "0.1.21"
ntex-http = "0.1"
ntex-rt = "0.4.7"

log = "0.4"
thiserror = "1.0"

ntex-tokio = { version = "0.4.0", optional = true }
ntex-glommio = { version = "0.4.0", optional = true }
ntex-async-std = { version = "0.4.0", optional = true }

# openssl
tls-openssl = { version="0.10", package = "openssl", optional = true }

# rustls
tls-rustls = { version = "0.23", package = "rustls", optional = true }
webpki-roots = { version = "0.25", optional = true }

[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
ntex = { version = "1", features = ["tokio"] }
