[package]
name = "ntex-connect"
version = "1.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "ntexwork connect utils for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ntex_connect"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["tls-openssl", "ntex-tls/openssl"]

# rustls support
rustls = ["tls-rustls", "webpki-roots", "ntex-tls/rustls"]

# tokio runtime
tokio = ["ntex-net/tokio"]

# glommio runtime
glommio = ["ntex-net/glommio"]

# async-std runtime
async-std = ["ntex-net/async-std"]

[dependencies]
ntex-service = "2.0.0"
ntex-io = "1.0.0"
ntex-tls = "1.0.0"
ntex-util = "1.0.0"
ntex-bytes = "0.1.21"
ntex-http = "0.1"
ntex-rt = "0.4.7"
ntex-net = "1.0.0"

log = "0.4"
thiserror = "1.0"

# openssl
tls-openssl = { version="0.10", package = "openssl", optional = true }

# rustls
tls-rustls = { version = "0.23", package = "rustls", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
ntex = { version = "1", features = ["tokio"] }
