[package]
name = "ntex-connect"
version = "1.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "ntexwork connect utils for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ntex_connect"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["ntex-tls/openssl", "tls_openssl"]

# rustls support
rustls = ["ntex-tls/rustls", "tls_rust"]

# tokio runtime
tokio = ["ntex-net/tokio"]

# glommio runtime
glommio = ["ntex-net/glommio"]

# async-std runtime
async-std = ["ntex-net/async-std"]

[dependencies]
ntex-io = "1.0.0"
ntex-net = "1.0"
ntex-tls = "1.1"

log = "0.4"
thiserror = "1.0"

# openssl
tls_openssl = { version = "0.10", package = "openssl", optional = true }

# rustls
tls_rust = { version = "0.23", package = "rustls", optional = true }
