[package]
name = "ntex-glommio"
version = "0.3.0-beta.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "glommio intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-rt-glommio/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2021"

[lib]
name = "ntex_glommio"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "0.1.19"
ntex-io = "0.3.0-beta.0"
ntex-util = "0.3.0-beta.0"
async-oneshot = "0.5.0"
futures-lite = "1.12"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.8"
