[package]
name = "ntex-http"
version = "0.1.15"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Http types for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-http/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ntex_http"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "0.1"

ahash = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = "1"
serde_json = "1"
ntex = "2"
ntex-util = "2"
ntex-macros = "0.1.3"
futures-util = { workspace = true }
