[package]
name = "ntex-http"
version = "1.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Http types for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-http/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "ntex_http"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ntex-bytes = { workspace = true }

foldhash = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }
ntex = { workspace = true }
futures-util = { workspace = true }
