[package]
name = "ntex-io"
version = "3.3.2"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for abstracting io streams"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-io/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_io"
path = "src/lib.rs"

[dependencies]
ntex-codec = "1"
ntex-bytes = "1.2"
ntex-util = "3"
ntex-service = "4"

bitflags = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
ntex = "3.0.0-pre.10"
rand = { workspace = true }
