[package]
name = "ntex-iodriver"
version = "0.1.0"
description = "Low-level driver for ntex"
categories = ["asynchronous"]
keywords = ["async", "iocp", "io-uring"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
    "x86_64-unknown-dragonfly",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-illumos",
    "x86_64-unknown-netbsd",
    "x86_64-unknown-openbsd",
]

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
cfg-if = { workspace = true }
crossbeam-channel = { workspace = true }
socket2 = { workspace = true }
slab = { workspace = true }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
aligned-array = "1.0.1"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

# Linux specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.0", optional = true }
polling = { version = "3.3.0", optional = true }

# Other platform dependencies
[target.'cfg(all(not(target_os = "linux"), unix))'.dependencies]
polling = "3.3.0"

[target.'cfg(unix)'.dependencies]
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
libc = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
default = ["io-uring"]
polling = ["dep:polling"]

io-uring-sqe128 = []
io-uring-cqe32 = []
io-uring-socket = []

iocp-global = []
iocp-wait-packet = []
