[package]
name = "ntex-macros"
version = "3.0.0"
description = "ntex proc macros"
readme = "README.md"
authors = ["ntex contributors <team@ntex.rs>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full", "parsing"] }
proc-macro2 = "^1"

[dev-dependencies]
ntex = "3.0.0-pre.9"
futures = "0.3"
