[package]
name = "ntex-macros"
version = "3.2.0"
description = "ntex proc macros"
readme = "README.md"
authors = ["ntex contributors <team@ntex.rs>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { version = "^2", features = ["full", "parsing"] }

[dev-dependencies]
ntex = { workspace = true }
futures = { workspace = true }
