[package]
name = "ntex-multipart"
version = "0.2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "krircc<krircc@gmail.com>"]
description = "Multipart support for ntex framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
repository = "https://github.com/fafhrd91/ntex.git"
documentation = "https://docs.rs/ntex-multipart/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "ntex_multipart"
path = "src/lib.rs"

[dependencies]
ntex = { version = "0.1.1",  path="../ntex"}
ntex-service = {version = "1.0.5", path="../ntex-service"}
bytes = "0.5.3"
derive_more = "0.99.2"
httparse = "1.3"
futures = "0.3.1"
log = "0.4"
mime = "0.3"
twoway = "0.2"

[dev-dependencies]
ntex = { version = "0.1.1",  path="../ntex"}
futures = "0.3"